# ipi-check

./: .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  report.sarif
.github/workflows/: ci.yml
samples/ipi-injections/: nvidia-codex-agents.md
samples/ipi-injections/copilot-yolo/: main.c  settings.json
samples/ipi-injections/unicode-tag-backdoor/: SKILL.md
samples/malicious-skills/credential-exfil/: SKILL.md
samples/malicious-skills/npm-backdoor/: SKILL.md
scripts/: ipi-check-hook.sh
specs/: INDEX.md  META.md  WORKFLOW.md
specs/architecture/: security-model.md  system-overview.md
specs/contracts/: cli-interface.md
specs/decisions/: 001-python-language.md  002-sarif-format.md  003-two-stage-pipeline.md  004-litellm-provider.md  005-pygments-code-extraction.md  006-tiktoken-token-counting.md  _template.md
specs/domains/: byte-analysis.md  confidence-fusion.md  file-discovery.md  llm-classifier.md  pattern-matching.md  reporting.md  semantic-heuristics.md
src/ipi_check/: __init__.py
src/ipi_check/cli/: main.py
tests/: conftest.py  test_byte_analysis.py  test_cli.py  test_code_extractor.py  test_confidence_fusion.py  test_file_discovery.py  test_llm_classifier.py  test_llm_sanitizer.py  test_pattern_matching.py  test_pipeline_integration.py  test_samples_detection.py  test_sarif_reporter.py  test_semantic_heuristics.py  test_skill_detection.py  test_skill_fusion.py  test_skill_llm.py  test_skill_patterns.py  test_skill_sarif.py  test_skill_static.py  test_static_result.py  test_token_counter.py  test_types.py
(+22 files in other folders)
