[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipi-check"
version = "0.1.0"
description = "SAST scanner for detecting indirect prompt injection (OWASP LLM01) in AI agent instruction files and source code"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "litellm>=1.0",
    "pathspec>=0.12",
    "pygments>=2.17",
    "regex>=2024.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "types-regex>=2024.0",
]
batch = [
    "tiktoken>=0.5",
]

[project.scripts]
ipi-check = "ipi_check.cli.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TC001", "TC002", "TC003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
